--- a/psi4/src/psi4/libfunctional/CMakeLists.txt
+++ b/psi4/src/psi4/libfunctional/CMakeLists.txt
@@ -18,3 +18,5 @@ set(sources_list PBE_Cfunctional.cc
                  xfunctional.cc
 )
 psi4_add_module(lib functional sources_list disp)
+target_link_libraries(functional PUBLIC ${LIBXC_LIBRARIES})
+target_include_directories(functional PUBLIC ${LIBXC_INCLUDE_DIRS})
