--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,5 +1,5 @@
 foreach(dir pybind11 libint ambit libefp pcmsolver chemps2 
-            erd dkh gdma
+            erd dkh gdma libxc
 )
    add_subdirectory(${dir})
 endforeach()
