--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,6 +215,7 @@ add_dependencies(psi4-core ambit_external
                            erd_external
                            gdma_external
                            #gtfock_external
+                           libxc_external
                            libint_external
                            pcmsolver_external
                            pybind11_external)
