--- a/psi4/CMakeLists.txt
+++ b/psi4/CMakeLists.txt
@@ -33,8 +33,9 @@ if(${ENABLE_dkh})
     find_package(dkh CONFIG REQUIRED)
 endif()
 find_package(libefp CONFIG REQUIRED COMPONENTS shallow)
-find_package(libxc MODULE REQUIRED)
-message("libxc PRITN  ${LIBXC_LIBRARIES} ${LIBXC_INCLUDE_DIRS} ${LIBXC_FOUND}")
+#find_package(libxc MODULE REQUIRED)
+find_package(Libxc CONFIG REQUIRED)
+message("libxc PRITN  ${Libxc_LIBRARIES} ${Libxc_INCLUDE_DIRS} ${Libxc_FOUND}")
 if(${ENABLE_erd})
     find_package(erd CONFIG REQUIRED)
 endif()
