CIWave: Work on TPDM efficiency

--- a/psi4/src/psi4/detci/CMakeLists.txt
+++ b/psi4/src/psi4/detci/CMakeLists.txt
@@ -4,4 +4,5 @@ SET_SOURCE_FILES_PROPERTIES(s1v.cc PROPERTIES COMPILE_FLAGS -O3)
 SET_SOURCE_FILES_PROPERTIES(s2v.cc PROPERTIES COMPILE_FLAGS -O3)
 SET_SOURCE_FILES_PROPERTIES(s3v.cc PROPERTIES COMPILE_FLAGS -O3)
 SET_SOURCE_FILES_PROPERTIES(vector.cc PROPERTIES COMPILE_FLAGS -O3)
+SET_SOURCE_FILES_PROPERTIES(tpdm.cc PROPERTIES COMPILE_FLAGS -O3)
 psi4_add_module(bin detci sources_list mints thce trans)
