XC: Adds the EP2 method

--- a/psi4/src/psi4/CMakeLists.txt
+++ b/psi4/src/psi4/CMakeLists.txt
@@ -6,7 +6,7 @@ foreach (dir_name libpsi4util liboptions libparallel libciomr libpsio libqt
 endforeach ()
 
 foreach (dir_name adc ccdensity ccenergy cceom cchbar cclambda ccresponse
-         cctransort cctriples dcft detci dfmp2
+         cctransort cctriples dcft detci dfmp2 dfep2
          dfocc efp_interface findif fisapt fnocc mcscf mrcc
          occ optking psimrcc sapt scfgrad thermo
          gdma_interface dmrg
