--- a/tests/sapt-dft1/CMakeLists.txt
+++ b/tests/sapt-dft1/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(TestingMacros)
 
-add_regression_test(sapt-dft1 "psi;quicktests;minitests;sapt")
+add_regression_test(sapt-dft1 "psi;quicktests;sapt")
