--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -85,7 +85,7 @@ foreach(test_name adc1 adc2 casscf-fzc-sp casscf-sa-sp ao-casscf-sp casscf-sp ca
                   rasci-ne rasscf-sp rohf-orb-rot sad1 sapt1 sapt2 sapt3 sapt4 sapt5 sapt6 
                   sapt7 sapt8 scf-bz2 scf-ecp scf-guess-read1 scf-guess-read2 scf-bs scf1 scf-occ
                   scf2 scf3 scf4 scf5 scf6 scf7 scf-property soscf-large soscf-ref
-                  soscf-dft stability1 dfep2-1 dfep2-2
+                  soscf-dft stability1 dfep2-1 dfep2-2 sapt-dft1 sapt-dft2
                   stability2 tu1-h2o-energy tu2-ch2-energy tu3-h2o-opt 
                   tu4-h2o-freq tu5-sapt tu6-cp-ne2 x2c1 x2c2 x2c3 zaptn-nh2 
                   options1 cubeprop-esp
