XC: Updated LibXC build the external system

--- a/external/upstream/CMakeLists.txt
+++ b/external/upstream/CMakeLists.txt
@@ -8,6 +8,7 @@ foreach(dir ambit
             pcmsolver
             pybind11
             simint
+            libxc
 )
    add_subdirectory(${dir})
 endforeach()
