Fixed namespace issues

--- a/psi4/src/psi4/libmints/CMakeLists.txt
+++ b/psi4/src/psi4/libmints/CMakeLists.txt
@@ -66,6 +66,10 @@ set(sources_list local.cc
                  cdsalclist.cc
                  erd_eri.cc
                  angularmomentum.cc
+		 bessel.cc
+		 gaussquad.cc
+		 ecp.cc
+		 ecpint.cc
 )
 if(TARGET simint::simint)
     list(APPEND sources_list siminteri.cc)
