lib3index: Adds python bindings to the DF_Helper object

--- a/psi4/src/CMakeLists.txt
+++ b/psi4/src/CMakeLists.txt
@@ -37,6 +37,7 @@ if(TARGET libefp::efp)
 endif()
 target_link_libraries(core PRIVATE ${psi4_binmodules})
 target_link_libraries(core PRIVATE ${LIBC_INTERJECT})
+target_link_libraries(core PRIVATE Libxc::xc)
 target_link_libraries(core PUBLIC pybind11::module)
 target_link_libraries(core PRIVATE Threads::Threads)
 
