Merge: More fixes to the grand master/libxc rebasing

--- a/psi4/src/psi4/lib3index/CMakeLists.txt
+++ b/psi4/src/psi4/lib3index/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(sources_list #dealias.cc
                  dftensor.cc
+                 df_helper.cc
                  #pstensor.cc
                  denominator.cc
                  pseudotrial.cc
