--- a/psi4/src/psi4/libqt/CMakeLists.txt
+++ b/psi4/src/psi4/libqt/CMakeLists.txt
@@ -1,20 +1,11 @@
-set(sources_list #zmat_point.cc
-                 lapack_intfc.cc
-                 #slaterdset.cc
-                 #strncpy.cc
-                 #sort.cc
-                 #mat_in.cc
+set(sources_list lapack_intfc.cc
                  dx_write.cc
-                 #orient_fragment.cc
-                 #rotate_vecs.cc
                  dirprd_block.cc
-                 cc_wfn.cc pople.cc
+                 pople.cc
                  schmidt_add.cc
                  mat_print.cc
-                 filter.cc
                  ras_set.cc
                  fill_sym_matrix.cc
-                 #rootfind.cc
                  cc_excited.cc
                  probabil.cc
                  dot_block.cc
@@ -26,11 +17,9 @@ set(sources_list #zmat_point.cc
                  3d_array.cc
                  blas_intfc23.cc
                  reorder_qt.cc
-                 ci_wfn.cc
                  schmidt.cc
                  invert.cc
                  solve_pep.cc
-                 #v_3.cc
                  david.cc
 )
 add_definitions("-DFC_SYMBOL=${FC_SYMBOL}")
