--- a/psi4/src/psi4/lib3index/CMakeLists.txt
+++ b/psi4/src/psi4/lib3index/CMakeLists.txt
@@ -1,13 +1,7 @@
-set(sources_list #dealias.cc
-                 dftensor.cc
+set(sources_list dftensor.cc
                  df_helper.cc
-                 #pstensor.cc
                  denominator.cc
-                 pseudotrial.cc
-                 fitter.cc
-                 #schwarz.cc
                  fittingmetric.cc
-                 #qr.cc
                  cholesky.cc
 )
 psi4_add_module(lib 3index sources_list mints fock)
