--- a/psi4/src/psi4/libciomr/CMakeLists.txt
+++ b/psi4/src/psi4/libciomr/CMakeLists.txt
@@ -1,19 +1,14 @@
-set(sources_list #mxmb.cc
-                 #eigout.cc
-                 init_array.cc
+set(sources_list init_array.cc
                  init_matrix.cc
                  block_matrix.cc
                  tqli.cc
                  flin.cc
                  sq_rsp.cc
-                 #add_arr.cc
                  int_array.cc
-                 #ffile.cc
                  zero.cc
                  print_mat.cc
                  tri_to_sq.cc
                  rsp.cc
-                 #add_mat.cc
                  mmult.cc
                  dot.cc
                  tred2.cc
