--- a/psi4/src/psi4/libparallel/CMakeLists.txt
+++ b/psi4/src/psi4/libparallel/CMakeLists.txt
@@ -1,9 +1,7 @@
-set(sources_list ParallelScanner.cc 
-                 p_fprintf.cc 
+set(sources_list
                  PsiOutStream.cc 
                  BasesBase.cc 
                  process.cc 
                  ParallelPrinter.cc 
-                 PsiInStream.cc 
 )
 psi4_add_module(lib parallel sources_list options)
