Cleanup: updates plugin headers

--- a/psi4/share/psi4/plugin/mointegrals/mointegrals.cc.template
+++ b/psi4/share/psi4/plugin/mointegrals/mointegrals.cc.template
@@ -33,6 +33,7 @@
 #include "psi4/libtrans/integraltransform.h"
 #include "psi4/libpsio/psio.hpp"
 #include "psi4/libmints/wavefunction.h"
+#include "psi4/libparallel/PsiOutStream.h"
 
 // This allows us to be lazy in getting the spaces in DPD calls
 #define ID(x) ints.DPD_ID(x)
